BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank) [CHANGES.txt]
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1127455 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Backward compatible changes:
 
 BUGFIXES:
 
-bookkeeper-server/
+ bookkeeper-server/
 
-BOOKKEEPER-19: BookKeeper doesn't support more than 2Gig of memory (ivan via fpj)
+  BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
+
+  BOOKKEEPER-19: BookKeeper doesn't support more than 2Gig of memory (ivan via fpj)
