BOOKKEEPER-30: Test are too noisy (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1145532 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,3 +17,6 @@ BUGFIXES:
   BOOKEEPER-22: Exception in LedgerCache causes addEntry request to fail (fpj via fpj)
 
   BOOKEEPER-5: Issue with Netty in BookKeeper (fpj and ivank via fpj)
+
+  BOOKKEEPER-30: Test are too noisy (ivank via fpj)
+
