BOOKKEEPER-27: mvn site failed with unresolved dependencies (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1152529 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,3 +21,5 @@ BUGFIXES:
   BOOKKEEPER-30: Test are too noisy (ivank via fpj)
 
   BOOKKEEPER-11: Read from open ledger (fpj via ivank)
+
+  BOOKKEEPER-27: mvn site failed with unresolved dependencies (ivank via fpj)
