BOOKKEEPER-29: BookieRecoveryTest fails intermittently (fpj via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1156096 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,3 +23,6 @@ BUGFIXES:
   BOOKKEEPER-11: Read from open ledger (fpj via ivank)
 
   BOOKKEEPER-27: mvn site failed with unresolved dependencies (ivank via fpj)
+  
+  BOOKKEEPER-29: BookieRecoveryTest fails intermittently (fpj via ivank)
+
