BOOKKEEPER-33: Add length and offset parameter to addEntry (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1156723 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,3 +26,5 @@ BUGFIXES:
   
   BOOKKEEPER-29: BookieRecoveryTest fails intermittently (fpj via ivank)
 
+  BOOKKEEPER-33: Add length and offset parameter to addEntry (ivank via fpj)
+
