BOOKKEEPER-29: BookieRecoveryTest fails intermittently (ivank, fpj via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1156766 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,3 +28,5 @@ BUGFIXES:
 
   BOOKKEEPER-33: Add length and offset parameter to addEntry (ivank via fpj)
 
+  BOOKKEEPER-29: BookieRecoveryTest fails intermittently (ivank, fpj via fpj)
+
