BOOKKEEPER-43: NullPointException when releasing topic
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1160913 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,3 +30,6 @@ BUGFIXES:
 
   BOOKKEEPER-29: BookieRecoveryTest fails intermittently (ivank, fpj via fpj)
 
+ hedwig-server/
+
+  BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
