--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -36,11 +36,14 @@ BUGFIXES:
 
   BOOKKEEPER-18: maven build is unstable (morel, ivank via ivank)
 
+  BOOKKEEPER-57: NullPointException at bookie.zk@EntryLogger (xulei via ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
   
   BOOKKEEPER-51: NullPointException at FIFODeliveryManager#deliveryPtrs (xulei via ivank)
+
 
  hedwig-client/
  
