BOOKKEEPER-86: bookkeeper-benchmark fails to compile after BOOKKEEPER-68
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1185775 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -42,6 +42,8 @@ BUGFIXES:
   
   BOOKKEEPER-68: Conditional setData (fpj via ivank)
 
+  BOOKKEEPER-86: bookkeeper-benchmark fails to compile after BOOKKEEPER-68 (ivank via breed)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
