missing CHANGE.txt entry for BOOKKEEPER-61 (commit 1180266)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1186382 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -44,6 +44,8 @@ BUGFIXES:
 
   BOOKKEEPER-86: bookkeeper-benchmark fails to compile after BOOKKEEPER-68 (ivank via breed)
 
+  BOOKKEEPER-61: BufferedChannel read endless when the remaining bytes of file is less than the capacity of read buffer (Sijie Guo via breed)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
