--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -46,6 +46,8 @@ BUGFIXES:
 
   BOOKKEEPER-61: BufferedChannel read endless when the remaining bytes of file is less than the capacity of read buffer (Sijie Guo via breed)
 
+  BOOKKEEPER-84: Add versioning for ZK metadata (ivank via breed)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
