--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,10 @@ BUGFIXES:
  
   BOOKKEEPER-52: Message sequence confuse due to the subscribeMsgQueue@SubscribeResponseHandler (xulei via ivank)
 
+ hedwig-benchmark/
+
+  BOOKKEEPER-88: derby doesn't like - in the topic names (breed via ivank)
+
 IMPROVEMENTS:
 
  BOOKKEEPER-28: Create useful startup scripts for bookkeeper and hedwig (ivank)
