--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,8 @@ BUGFIXES:
 
   BOOKKEEPER-83: Added versioning and flags to the bookie protocol (ivank)
 
+  BOOKKEEPER-89: Bookkeeper API changes for initial Bookkeeper release (ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
