BOOKKEEPER-71: hedwig c++ client does not build . (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1190306 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -74,6 +74,8 @@ BUGFIXES:
 
   BOOKKEEPER-88: derby doesn't like - in the topic names (breed via ivank)
 
+  BOOKKEEPER-71: hedwig c++ client does not build . (ivank)
+
 IMPROVEMENTS:
 
  BOOKKEEPER-28: Create useful startup scripts for bookkeeper and hedwig (ivank)
