BOOKKEEPER-106:	recoveryBookieData can select a recovery bookie which is already in the ledgers ensemble (forgot to edit CHANGES.txt)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1202372 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -86,6 +86,8 @@ BUGFIXES:
  
   BOOKKEEPER-80: subscription msg queue race condition in hedwig c++ client (Sijie Guo via ivank)
 
+  BOOKKEEPER-106:	recoveryBookieData can select a recovery bookie which is already in the ledgers ensemble (ivank via fpj)
+
 IMPROVEMENTS:
 
  BOOKKEEPER-28: Create useful startup scripts for bookkeeper and hedwig (ivank)
