BOOKKEEPER-104: Add versioning between bookie and its filesystem layout (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1202814 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -68,6 +68,8 @@ BUGFIXES:
 
   BOOKKEEPER-101: Add Fencing to Bookkeeper (ivank)
 
+  BOOKKEEPER-104: Add versioning between bookie and its filesystem layout (ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
