BOOKKEEPER-115: LocalBookKeeper fails after BOOKKEEPER-108 (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1203774 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -76,6 +76,8 @@ BUGFIXES:
 
   BOOKKEEPER-108: add configuration support for BK (Sijie via ivank)
 
+  BOOKKEEPER-115: LocalBookKeeper fails after BOOKKEEPER-108 (ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
