BOOKKEEPER-114: add a shutdown hook to shut down bookie server safely. (Sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1203790 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -78,6 +78,8 @@ BUGFIXES:
 
   BOOKKEEPER-115: LocalBookKeeper fails after BOOKKEEPER-108 (ivank)
 
+  BOOKKEEPER-114: add a shutdown hook to shut down bookie server safely. (Sijie via ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
