BOOKKEEPER-119: Keys in configuration have inconsistent style (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1207396 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -131,3 +131,6 @@ IMPROVEMENTS:
   BOOKKEEPER-109: Add documentation to describe how bookies flushes data (Sijie Guo via fpj)
 
   BOOKKEEPER-90: Hedwig API changes for initial Bookkeeper release (ivank via fpj)
+
+  BOOKKEEPER-119: Keys in configuration have inconsistent style (ivank via fpj)
+
