--- a/doc/bookkeeperConfig.textile
+++ b/doc/bookkeeperConfig.textile
@@ -73,3 +73,45 @@ bq. NOTE: keeping number of old journal files would be useful for manually recov
 h1. ZooKeeper Metadata
 
 p. For BookKeeper, we require a ZooKeeper installation to store metadata, and to pass the list of ZooKeeper servers as parameter to the constructor of the BookKeeper class ( @org.apache.bookkeeper.client,BookKeeper@ ). To setup ZooKeeper, please check the "ZooKeeper documentation":index.html. 
+
+p. BookKeeper provides two mechnaisms to organize its metadata in ZooKeeper.
+
+* FlatLedgerManager : All ledger metadata are placed as children in a single zookeeper path.
+* HierarchicalLedgerManager : All ledger metadata are partitioned into 2-level znodes.
+
+h2. Flat Ledger Manager
+
+p. All ledgers' metadata are put in a single zookeeper path, created using zookeeper sequential node, which can ensure uniqueness of ledger id. Each ledger node is prefixed with 'L'.
+
+p. Bookie server manages its owned active ledgers in a hash map. So it is easy for bookie server to find what ledgers are deleted from zookeeper and garbage collect them. And its garbage collection flow is described as below:
+
+* Fetch all existing ledgers from zookeeper (*zkActiveLedgers*).
+* Fetch all ledgers currently active within the Bookie (*bkActiveLedgers*).
+* Loop over *bkActiveLedgers* to find those ledgers which do not exist in *zkActiveLedgers* and garbage collect them.
+
+h2. Hierarchical Ledger Manager
+
+p. Hierarchical Ledger Manager first obtains a global unique id from ZooKeeper using a EPHEMERAL_SEQUENTIAL znode.
+
+p. Since ZooKeeper sequential counter has a format of %10d -- that is 10 digits with 0 (zero) padding, i.e. "&lt;path&gt;0000000001", HierarchicalLedgerManager splits the generated id into 3 parts :
+
+ @ {level1 (2 digits)}{level2 (4 digits)}{level3 (4 digits)}
+
+p. These 3 parts are used to form the actual ledger node path used to store ledger metadata:
+
+ @ {ledgers_root_path}/{level1}/{level2}/L{level3}
+
+p. E.g. Ledger 0000000001 is split into 3 parts 00, 0000, 00001, which is stored in znode /{ledgers_root_path}/00/0000/L0001. So each znode could have at most 10000 ledgers, which avoids the problem of the child list being larger than the maximum ZooKeeper packet size.
+
+p. Bookie server manages its active ledgers in a sorted map, which simplifies access to active ledgers in a particular (level1, level2) partition.
+
+p. Garbage collection in bookie server is processed node by node as follows:
+
+* Fetching all level1 nodes, by calling zk#getChildren(ledgerRootPath).
+** For each level1 nodes, fetching their level2 nodes :
+** For each partition (level1, level2) :
+*** Fetch all existed ledgers from zookeeper belonging to partition (level1, level2) (*zkActiveLedgers*).
+*** Fetch all ledgers currently active in the bookie which belong to partition (level1, level2) (*bkActiveLedgers*).
+*** Loop over *bkActiveLedgers* to find those ledgers which do not exist in *zkActiveLedgers*, and garbage collect them.
+
+bq. NOTE: Hierarchical Ledger Manager is more suitable to manage large number of ledgers existed in BookKeeper.
