BOOKKEEPER-53: race condition of outstandingMsgSet@SubscribeResponseHandler
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1207648 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -114,6 +114,8 @@ BUGFIXES:
 
   BOOKKEEPER-117: Support multi threads in hedwig cpp client to leverage multi-core hardware (Sijie Guo via ivank)
 
+  BOOKKEEPER-53: race condition of outstandingMsgSet@SubscribeResponseHandler (fpj via breed)
+
 IMPROVEMENTS:
 
  BOOKKEEPER-28: Create useful startup scripts for bookkeeper and hedwig (ivank)
