BOOKKEEPER-62: Bookie can not start when encountering corrupted records (breed via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1207997 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -86,6 +86,8 @@ BUGFIXES:
 
   BOOKKEEPER-125: log4j still used in some places (ivank)
 
+  BOOKKEEPER-62: Bookie can not start when encountering corrupted records (breed via ivank)
+
  hedwig-server/
 
   BOOKKEEPER-43: NullPointException when releasing topic (Sijie Guo via breed)
